token exp alert, users table, create/delete user

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,7 +14,8 @@ body {
 		"Droid Sans", "Helvetica Neue", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: #dadadaea;
+	background-color: #adb5bd;
+	color: #212529;
 }
 
 code {
