--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -1,8 +1,8 @@
 .appContainer {
 	display: grid;
-	grid-template-columns: 1fr 3fr;
+	grid-template-columns: minmax(max-content, 360px) 3fr;
 	height: 100vh;
 	.contentContainer {
-		margin-left: 1.2rem;
+		margin: 0 0.6rem;
 	}
 }
