--- a/client/src/pages/Accounts/Accounts.module.scss
+++ b/client/src/pages/Accounts/Accounts.module.scss
@@ -1,16 +1,16 @@
-.usersContainer {
+.accountsContainer {
 	position: relative;
 	width: 100%;
 	height: 99vh;
 
-	.usersHeader {
+	.accountsHeader {
 		position: relative;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		padding: 10px 0;
 		margin: 10px 0;
-		.usersTitle {
+		.accountsTitle {
 			display: flex;
 			align-items: center;
 			justify-content: center;
@@ -18,7 +18,7 @@
 			font-weight: 500;
 			text-align: center;
 		}
-		.addUserBtn {
+		.addAccountBtn {
 			position: absolute;
 			right: 24px;
 			height: 42px;
